Thu Oct 16 08:37:54 2003  Chad Elliott  <elliott_c@ociweb.com>

        * apps/gperf/tests/tests.mpc:

          Fixed a bug with dependencies and parallelism between building the
          test and running the test.

Wed Oct 15 13:40:02 2003  Huang-Ming Huang <hh1@cse.wustl.edu>

        * bin/MakeProjectCreator/config/ftrtevent.mpb
        * bin/MakeProjectCreator/config/ftrteventclient.mpb
          Added for fault tolerant event service.

Wed Oct 15 18:28:02 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * ace/os_include/net/os_if.h:
          Added #undef of IOR on HP-UX.  IOR is used in TAO.  Thanks to
          Torsten Kopper <tkue_0931@fastmail.fm> for this patch.

Wed Oct 15 12:10:39 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

        * ACE-INSTALL.html: Updated the documentation to make it
          clear that setenv is a TCSH/CSHism.  Thanks to David McKen
          <cic_3_b@yahoo.com> for reporting this.

Wed Oct 15 13:22:32 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_linux_borland.GNU:
          Also set versioned_so to 0 in this file.

Wed Oct 15 13:16:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_mingw32.GNU:
        * include/makeinclude/platform_cygwin32.GNU:
          Instead of setting SONAME and SOVERSION to empty, set
          versioned_so to 0 to indicate that versioned dll's should
          be used because cygwin and mingw have problem with this.
          This makes Cygwin/MinGW working again.

Wed Oct 15 08:45:20 EDT 2003  Kevin Bryank <bryank@cs.uri.edu>

        * bin/MakeProjectCreator/config/rtcosscheduling.mpb:
          Adding base project for using the RTC 1.0 Scheduling Service

Wed Oct 15 10:40:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_Base.cpp:
          Fixed unused argument warning when ACE_HAS_REACTOR_NOTIFICATION_QUEUE
          is defined
